--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,6 +5,10 @@ body {
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
+.no-transition {
+  transition: none !important;
+}
+
 :root {
   --primary-light: #eee;
   --background-light: white;
